--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
   <dependencies>
      <dependency>
      	<groupId>org.spigotmc</groupId>
-        <artifactId>spigot</artifactId>
-        <version>1.16.1-R0.1-SNAPSHOT</version>
+        <artifactId>spigot-api</artifactId>
+        <version>1.16.3-R0.1-SNAPSHOT</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
@@ -48,6 +48,10 @@
 		<repository>
 			<id>civ-jenkins</id>
 			<url>https://repo.civclassic.com/repository/internal/</url>
+		</repository>
+		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 		</repository>
   </repositories>
 </project>
